manifests/kustomizations/tenant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
