manifests/kustomizations/jhub_deployment.yaml
# Copyright (c) 2022 dciangot
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

apiVersion: v1
kind: Pod
metadata:
  name: daskhub
  labels:
    app.kubernetes.io/name: daskhub
spec:
  serviceAccountName: jupyterhub
  automountServiceAccountToken: true
  containers:
  - name: daskhub
    image: "dciangot/daskhub:v6"
    args:
    - bash
    - -c
    - "jupyterhub --port=8083 --config=/opt/jhub/jupyterhub_config.py"
    volumeMounts:
    - name: config
      mountPath: "/opt/jhub"
      readOnly: true
    - name: hub
      mountPath: "/srv/jupyterhub"
  volumes:
  - name: config
    configMap:
      name: jhub-config
  - name: hub
    persistentVolumeClaim:
      claimName: jhub-dir

---
apiVersion: v1
kind: Service
metadata:
  name: hub
spec:
  selector:
    app.kubernetes.io/name: daskhub
  type: ClusterIP 
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
