manifests/kustomizations/jhub-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: selfsigned-issuer
      kubernetes.io/ingress.class: nginx
    name: ingress-sosc
    namespace: default
  spec:
    rules:
    - host: jhub.example.com
      http:
        paths:
        - backend:
            service:
              name: hub
              port:
                number: 8083
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - jhub.example.com
      secretName: nginx-tls-sosc
kind: List
